Bug 354996 - Line width for plot frame and ticks increases unwantedly when using high resolution screen
Summary: Line width for plot frame and ticks increases unwantedly when using high reso...
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: view objects (other bugs)
Version First Reported In: 2.0.8
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-07 15:43 UTC by manuel
Modified: 2016-02-24 16:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description manuel 2015-11-07 15:43:36 UTC
After saving and reopening a .kst file, I see that the line width of the plot frame and ticks have increased. The width is increased with following save/reopen actions. This happens only when I have a large application window before saving the .kst file. For example when the application is maximized to full screen on 3200x1800 and 3840x2160 resolutions.



Reproducible: Always

Steps to Reproduce:
1. Start kst-plot and maximize to full screen, 3200x1800 pixels.
2. Create a plot in your application window, any desired size.
3. Save the .kst file
4. Open the .kst file and check the line width

Actual Results:  
The Line width of the plot and the line width of the ticks has increased.

Expected Results:  
The Line width of the plot and the line width of ticks should be kept.

Example cut out of .kst file (the pen tag only) after first save:
                <pen style="1" width="1" miterlimit="2" cap="16" joinStyle="64">
                    <brush color="#000000" style="1"/>
                </pen>

Example cut out of .kst file (pen tag only) after second save:
                <pen style="1" width="2" miterlimit="2" cap="16" joinStyle="64">
                    <brush color="#000000" style="1"/>
                </pen>
Comment 1 Netterfield 2016-02-24 16:16:00 UTC
Git commit 34e03ead0cd5eee75d647b2c96a7794fdc6cdfac by Barth Netterfield.
Committed on 24/02/2016 at 16:15.
Pushed by netterfield into branch 'master'.

Save the correct line width.

M  +1    -1    src/libkstapp/viewitem.cpp

http://commits.kde.org/kst-plot/34e03ead0cd5eee75d647b2c96a7794fdc6cdfac