Save the correct line width.

BUG: 354996